--- a/index.ipynb
+++ b/index.ipynb
@@ -155,11 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-34.6037"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinates[0]\n",
+    "ba_longitude"
    ]
   },
   {
