--- a/index.ipynb
+++ b/index.ipynb
@@ -433,11 +433,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f95be1d0c88>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca_marker = neighborhood_markers[-1]"
+    "la_boca_marker = neighborhood_markers[-1]\n",
+    "la_boca_marker"
    ]
   },
   {
