automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,8 @@
    ],
    "source": [
     "la_boca_marker = neighborhood_markers[-1]\n",
-    "la_boca_marker[0]"
+    "la_boca_marker\n",
+    "marker_six"
    ]
   },
   {
