--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -487,16 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x109865e80>"
+       "<folium.map.Marker at 0x7f95be1d0c88>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,9 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(neighborhood_markers)) # 6\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
@@ -528,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta = None"
+    "recoleta = neighborhood_markers()"
    ]
   },
   {
